--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
-    "axios": "^1.12.2",
+    "axios": "^1.13.1",
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
