--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.4",
     "axios": "^1.13.1",
     "bootstrap": "^5.3.8",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
