--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^7.3.4",
-    "axios": "^1.13.1",
+    "@mui/material": "^7.3.5",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.3.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
